# repo-skeptic

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
scripts/: audit-repo-json.sh  audit-repo.sh  bootstrap.sh  snapshot-scan.sh  star-analysis.sh
skills/repo-skeptic/: REFERENCE.md  SKILL.md
skills/repo-skeptic/agents/: openai.yaml
skills/repo-skeptic/repo_skeptic/: __init__.py  cli.py  github_api.py  heuristics.py  service.py
skills/repo-skeptic/scripts/: audit-repo-json.sh  audit-repo.sh  snapshot-scan.sh  star-analysis.sh
src/repo_skeptic/: cli.py  github_api.py
tests/: test_cli.py  test_heuristics.py  test_service.py
