[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-skeptic"
version = "0.1.0"
description = "Verify GitHub repositories before trusting them"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "William Warlick" }
]
keywords = ["github", "security", "supply-chain", "audit", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
  "Environment :: Console"
]

[project.scripts]
repo-skeptic = "repo_skeptic.cli:main"

[tool.setuptools]
package-dir = {"" = "skills/repo-skeptic"}

[tool.setuptools.packages.find]
where = ["skills/repo-skeptic"]
